--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:fitsSystemWindows="true"
+    tools:context=".MainActivity">
+
+    <ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <LinearLayout  android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:id="@+id/mainLayout"
     android:background="#DCE0E1"
     tools:context="com.workspaceit.themallbd.MainActivity">
-
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -281,17 +291,32 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:background="#FFFFFF">
+        android:layout_height="fill_parent">
 
-        <GridView
+        <com.workspaceit.themallbd.utility.ExpandableHeightGridView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/gridView_all_Product"
             android:numColumns="auto_fit"
+            android:background="#FFFFFF"
+            android:verticalSpacing="1dp"
+            android:paddingLeft="1dip"
+            android:paddingTop="1dip"
+            android:horizontalSpacing="1dp"
             android:columnWidth="150dp"/>
     </LinearLayout>
 
 
 </LinearLayout>
 </ScrollView>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/header"
+        app:menu="@menu/nav_drawer"
+        />
+
+</android.support.v4.widget.DrawerLayout>
