--- a/app/src/main/res/layout/custom_horizontal_product_list.xml
+++ b/app/src/main/res/layout/custom_horizontal_product_list.xml
@@ -22,7 +22,8 @@
             android:textSize="@dimen/material_text_caption"
             android:id="@+id/tv_productName_hl"
             android:layout_gravity="center"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:textAlignment="center" />
 
         <TextView
             android:layout_width="match_parent"
@@ -30,7 +31,8 @@
             android:id="@+id/tv_productPrice_hl"
             android:textSize="@dimen/material_text_caption"
             android:singleLine="true"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:textAlignment="center" />
     </LinearLayout>
 
 </RelativeLayout>
