--- a/app/src/main/res/layout/category_parents_group.xml
+++ b/app/src/main/res/layout/category_parents_group.xml
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:drawableRight="@drawable/back"
         android:textSize="17sp"
+        android:textAllCaps="true"
         android:textColor="#FFFFFF" />
 
 </LinearLayout>
