category display done

--- a/app/src/main/res/layout/category_child_of_child_items.xml
+++ b/app/src/main/res/layout/category_child_of_child_items.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="55dp"
-    android:background="#F6F2F2"
+    android:layout_height="wrap_content"
+    android:background="#FFFFFF"
+    android:padding="8dp"
     android:orientation="vertical" >
 
     <TextView
         android:id="@+id/child_of_child"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="17sp"
+        android:textSize="15sp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:textColor="#000000"
