--- a/app/src/main/res/layout/category_child_items_in_group.xml
+++ b/app/src/main/res/layout/category_child_items_in_group.xml
@@ -3,17 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="55dp"
     android:background="#F6F2F2"
+    android:padding="8dp"
     android:orientation="vertical" >
 
     <TextView
         android:id="@+id/lblListItem"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="17sp"
+        android:textSize="15sp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:textColor="#000000"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
-        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"/>
+        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft" />
 
 </LinearLayout>
