--- a/app/src/main/res/layout/category_wise_products.xml
+++ b/app/src/main/res/layout/category_wise_products.xml
@@ -26,7 +26,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/material_text_body1"
             android:text="Large Text"
             android:id="@+id/product_category_name"
             android:layout_marginTop="10dp"
@@ -35,7 +35,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/material_text_body1"
             android:text="Large Text"
             android:id="@+id/product_category_price" />
     </LinearLayout>
