--- a/app/src/main/res/drawable/custom_indicator.xml
+++ b/app/src/main/res/drawable/custom_indicator.xml
@@ -1,4 +1,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_expanded="true" android:drawable="@drawable/arrow_up" />
+    <item
+        android:state_expanded="true"
+        android:drawable="@drawable/arrow_up" />
     <item android:drawable="@drawable/arrow_down" />
 </selector>
